--- a/ansible/dev/media-stack/roles/vault/tasks/main.yml
+++ b/ansible/dev/media-stack/roles/vault/tasks/main.yml
@@ -1,4 +1,31 @@
 ---
-- name: Placeholder Vault role
-  debug:
-    msg: "Vault role included - add vault-related logic here as needed."
+- name: Check if qBittorrent Vault secret exists
+  community.hashi_vault.hashi_vault:
+    url: "{{ vault_addr }}"
+    token: "{{ vault_token }}"
+    secret: "secret/data/secret/qbittorrent"
+  register: qbittorrent_secret
+  ignore_errors: true
+
+- name: Generate qBittorrent credentials and store in Vault
+  when: qbittorrent_secret.failed
+  block:
+    - name: Generate random username
+      set_fact:
+        qbittorrent_generated_user: "admin"
+
+    - name: Generate random password
+      community.general.password:
+        length: 16
+        special: true
+      register: qbittorrent_generated_password
+
+    - name: Write qBittorrent secret to Vault
+      community.hashi_vault.hashi_vault_write:
+        url: "{{ vault_addr }}"
+        token: "{{ vault_token }}"
+        path: "secret/data/secret/qbittorrent"
+        data:
+          data:
+            username: "{{ qbittorrent_generated_user }}"
+            password: "{{ qbittorrent_generated_password.password }}"
