--- a/inventory_network_vm.yml
+++ b/inventory_network_vm.yml
@@ -3,6 +3,6 @@ all:
     network_vm:
       ansible_host: 192.168.50.220
       ansible_user: ubuntu
-      ansible_ssh_private_key_file: /root/.ssh/network_vm_id_ed25519
+      ansible_ssh_private_key_file: ~/.ssh/network_vm_id_ed25519
       ansible_python_interpreter: /usr/bin/python3
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
