--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -26,6 +26,18 @@ jobs:
           terraform -version
           cd -
 
+      - name: Terraform Destroy
+        env:
+          VAULT_ADDR: http://192.168.50.169:8200
+          VAULT_TOKEN: root
+          TF_VAR_proxmox_api_url: http://192.168.50.2:8006/api2/json
+          TF_VAR_proxmox_user: root@pam
+          TF_VAR_proxmox_password: Tomtom22!
+          TF_VAR_vault_token: root
+        run: |
+          cd terraform/dev/network-vm
+          terraform destroy -auto-approve
+      
       - name: Terraform Init
         env:
           VAULT_ADDR: http://192.168.50.169:8200
