--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -13,6 +13,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+      - name: Cache Terraform state
+        uses: actions/cache@v3
+        with:
+          path: terraform/dev/network-vm/terraform.tfstate
+          key: terraform-state-${{ runner.os }}-${{ hashFiles('terraform/dev/network-vm/*.tf') }}
+          restore-keys: |
+            terraform-state-${{ runner.os }}-
 
       - name: Install Terraform
         run: |
