--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Cache Terraform state
         uses: actions/cache@v3
         with:
-          path: terraform/dev/network-vm/terraform.tfstate
+          path: terraform/dev/network-vm/
           key: terraform-state-${{ runner.os }}-${{ hashFiles('terraform/dev/network-vm/*.tf') }}
           restore-keys: |
             terraform-state-${{ runner.os }}-
