--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -13,97 +13,80 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: Cache Terraform state
-        uses: actions/cache@v3
-        with:
-          path: terraform/dev/network-vm/
-          key: terraform-state-${{ runner.os }}-${{ hashFiles('terraform/dev/network-vm/*.tf') }}
-          restore-keys: |
-            terraform-state-${{ runner.os }}-
 
       - name: Install Terraform and tools
         run: |
           apt-get update
           apt-get install -y wget unzip curl jq
-          mkdir -p /tmp/terraform-bin
-          cd /tmp/terraform-bin
           wget https://releases.hashicorp.com/terraform/1.6.4/terraform_1.6.4_linux_amd64.zip
           unzip terraform_1.6.4_linux_amd64.zip
-          sudo mv terraform /usr/local/bin/
+          mv terraform /usr/local/bin/
           terraform -version
 
-      - name: Cleanup Proxmox VM via API with debugging
+      - name: Cleanup Proxmox VM via API
         env:
-          PVE_API: http://192.168.50.2:8006/api2/json
+          PVE_API: https://192.168.50.2:8006/api2/json
           PVE_USER: root@pam
           PVE_PASS: Tomtom22!
           PVE_NODE: betsy
           VMID: '220'
         run: |
-          login=$(curl -sk -d "username=$PVE_USER&password=$PVE_PASS" "${PVE_API}/access/ticket/")
-          echo "Login response: $login"
-
+          login=$(curl -skL -d "username=$PVE_USER&password=$PVE_PASS" "$PVE_API/access/ticket/")
           ticket=$(echo $login | jq -r '.data.ticket')
           csrftoken=$(echo $login | jq -r '.data.CSRFPreventionToken')
-
           if [[ -z "$ticket" || "$ticket" == "null" ]]; then
-          echo "Failed to get Proxmox API ticket."
-          exit 1
+            echo "Failed to get Proxmox API ticket."
+            exit 1
           fi
-
           curl -sk -X POST "$PVE_API/nodes/$PVE_NODE/lxc/$VMID/status/stop" \
-          --header "Cookie: PVEAuthCookie=$ticket" \
-          --header "CSRFPreventionToken: $csrftoken" || true
-
+            -H "Cookie: PVEAuthCookie=$ticket" \
+            -H "CSRFPreventionToken: $csrftoken"
           curl -sk -X DELETE "$PVE_API/nodes/$PVE_NODE/lxc/$VMID" \
-          --header "Cookie: PVEAuthCookie=$ticket" \
-          --header "CSRFPreventionToken: $csrftoken" || true
-      
+            -H "Cookie: PVEAuthCookie=$ticket" \
+            -H "CSRFPreventionToken: $csrftoken"
+
       - name: Terraform Init
         env:
           VAULT_ADDR: http://192.168.50.169:8200
-          VAULT_TOKEN: hvs.CAESIB2zftqrgOhmHowvC_CIkxo8bJHLh7ai69dIan60Y05hGh4KHGh2cy40emRkN3M3ZzcyNHVZd1RiYjdLek5yS1A
-          TF_VAR_proxmox_api_url: http://192.168.50.2:8006/api2/json
-          TF_VAR_proxmox_user: root@pam
-          TF_VAR_proxmox_password: Tomtom22!
-          TF_VAR_vault_token: root
+          VAULT_TOKEN: root
         run: |
           cd terraform/dev/network-vm
           terraform init -reconfigure
-          
-      - name: Terraform Destroy
-        env:
-          VAULT_ADDR: http://192.168.50.169:8200
-          VAULT_TOKEN: hvs.CAESIB2zftqrgOhmHowvC_CIkxo8bJHLh7ai69dIan60Y05hGh4KHGh2cy40emRkN3M3ZzcyNHVZd1RiYjdLek5yS1A
-          TF_VAR_proxmox_api_url: http://192.168.50.2:8006/api2/json
-          TF_VAR_proxmox_user: root@pam
-          TF_VAR_proxmox_password: Tomtom22!
-          TF_VAR_vault_token: root
-        run: |
-          cd terraform/dev/network-vm
-          terraform destroy -auto-approve
-          
+
       - name: Terraform Apply
         env:
           VAULT_ADDR: http://192.168.50.169:8200
-          VAULT_TOKEN: hvs.CAESIB2zftqrgOhmHowvC_CIkxo8bJHLh7ai69dIan60Y05hGh4KHGh2cy40emRkN3M3ZzcyNHVZd1RiYjdLek5yS1A
-          TF_VAR_proxmox_api_url: http://192.168.50.2:8006/api2/json
-          TF_VAR_proxmox_user: root@pam
-          TF_VAR_proxmox_password: Tomtom22!
-          TF_VAR_vault_token: root
+          VAULT_TOKEN: root
         run: |
           cd terraform/dev/network-vm
           terraform apply -auto-approve
 
-  ansible:
+  vault:
     needs: terraform
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Vault CLI
+        run: |
+          wget https://releases.hashicorp.com/vault/1.21.0/vault_1.21.0_linux_amd64.zip
+          unzip vault_1.21.0_linux_amd64.zip
+          mv vault /usr/local/bin/
+
+      - name: Generate Vault secrets for network VM
+        env:
+          VAULT_ADDR: http://192.168.50.169:8200
+          VAULT_TOKEN: root
+        run: |
+          chmod +x scripts/dev/network-vm/vault-generate-secrets.sh
+          scripts/dev/network-vm/vault-generate-secrets.sh
+
+  ansible:
+    needs: [terraform, vault]
     runs-on: ubuntu-latest
     steps:
       - name: Install Ansible and Python deps
         run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pip python3-venv jq
+          apt-get update
+          apt-get install -y python3-pip python3-venv jq netcat-openbsd
           python3 -m venv /tmp/ansible-venv
           source /tmp/ansible-venv/bin/activate
           pip install --upgrade pip wheel
@@ -113,39 +96,12 @@ jobs:
       - name: Retrieve SSH key from Vault
         env:
           VAULT_ADDR: http://192.168.50.169:8200
-          VAULT_TOKEN: hvs.CAESIB2zftqrgOhmHowvC_CIkxo8bJHLh7ai69dIan60Y05hGh4KHGh2cy40emRkN3M3ZzcyNHVZd1RiYjdLek5yS1A
+          VAULT_TOKEN: root
         run: |
-          apt-get install -y wget unzip curl
-          wget https://releases.hashicorp.com/vault/1.21.0/vault_1.21.0_linux_amd64.zip
-          unzip vault_1.21.0_linux_amd64.zip
-          sudo mv vault /usr/local/bin/
           vault kv get -field=private secret/ssh_keys/network-vm > ~/.ssh/network_vm_id_ed25519
           chmod 600 ~/.ssh/network_vm_id_ed25519
 
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Generate Vault secrets for network VM
-        run: |
-          export VAULT_ADDR=http://192.168.50.169:8200
-          export VAULT_TOKEN=root
-          chmod +x scripts/dev/network-vm/vault-generate-secrets.sh
-          scripts/dev/network-vm/vault-generate-secrets.sh
-
-      - name: Check for SSH key file and path
-        run: |
-          echo "HOME is $HOME"
-          ls -l $HOME/.ssh/
-          cat $HOME/.ssh/network_vm_id_ed25519 || true
-          cat $HOME/.ssh/network_vm_id_ed25519 || true
-          
-      - name: Check SSH port connectivity
-        run: |
-          apt-get update
-          apt-get install -y netcat-openbsd
-          nc -zv 192.168.50.200 22 || echo "Port 22 unreachable"
-
-      - name: Wait for SSH to be ready on network VM
+      - name: Wait for SSH to be ready
         run: |
           for i in {1..30}; do
             if nc -z -w3 192.168.50.220 22; then
