removed need for vault for now

--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -36,11 +36,10 @@ jobs:
         id: init
         working-directory: terraform/dev/network-vm
         env:
-          TF_VAR_proxmox_api_url: ${{ secrets.PROXMOX_API_URL }}
-          TF_VAR_proxmox_user: ${{ secrets.PROXMOX_USER }}
-          TF_VAR_proxmox_password: ${{ secrets.PROXMOX_PASSWORD }}
-          VAULT_ADDR: ${{ secrets.VAULT_ADDR || 'http://localhost:8200' }}
-          VAULT_NAMESPACE: ${{ secrets.VAULT_NAMESPACE || '' }}
+          TF_VAR_pve_api: ${{ secrets.PVE_API }}
+          TF_VAR_pve_user: ${{ secrets.PVE_USER }}
+          TF_VAR_pve_pass: ${{ secrets.PVE_PASS }}
+          TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
         run: |
           terraform init -input=false
 
@@ -48,11 +47,10 @@ jobs:
         id: plan
         working-directory: terraform/dev/network-vm
         env:
-          TF_VAR_proxmox_api_url: ${{ secrets.PROXMOX_API_URL }}
-          TF_VAR_proxmox_user: ${{ secrets.PROXMOX_USER }}
-          TF_VAR_proxmox_password: ${{ secrets.PROXMOX_PASSWORD }}
-          VAULT_ADDR: ${{ secrets.VAULT_ADDR || 'http://localhost:8200' }}
-          VAULT_NAMESPACE: ${{ secrets.VAULT_NAMESPACE || '' }}
+          TF_VAR_pve_api: ${{ secrets.PVE_API }}
+          TF_VAR_pve_user: ${{ secrets.PVE_USER }}
+          TF_VAR_pve_pass: ${{ secrets.PVE_PASS }}
+          TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
         run: |
           terraform plan -no-color -input=false -out=tfplan
           echo "tf_plan=$(base64 -w0 tfplan)" >> $GITHUB_OUTPUT
@@ -71,21 +69,11 @@ jobs:
           terraform_version: ${{ env.TF_VERSION }}
           terraform_wrapper: false
 
-      - name: Setup Vault
-        uses: hashicorp/vault-action@v2
-        with:
-          url: ${{ secrets.VAULT_ADDR }}
-          method: jwt
-          jwtGithubAudience: ${{ secrets.VAULT_AUDIENCE }}
-          secrets: |
-            secret/data/network-vm PVE_CREDS | PVE_USER PVE_PASS ;
-            secret/data/network-vm/ssh SSH_PRIVATE_KEY | SSH_PRIVATE_KEY ;
-
       - name: Cleanup Proxmox VM via API
         env:
           PVE_API: ${{ secrets.PVE_API }}
-          PVE_USER: ${{ env.PVE_USER }}
-          PVE_PASS: ${{ env.PVE_PASS }}
+          PVE_USER: ${{ secrets.PVE_USER }}
+          PVE_PASS: ${{ secrets.PVE_PASS }}
           PVE_NODE: ${{ env.PVE_NODE }}
           VMID: ${{ env.VMID }}
         run: |
@@ -95,38 +83,38 @@ jobs:
       - name: Terraform Apply
         working-directory: terraform/dev/network-vm
         env:
-          TF_VAR_proxmox_api_url: ${{ secrets.PROXMOX_API_URL }}
-          TF_VAR_proxmox_user: ${{ secrets.PROXMOX_USER }}
-          TF_VAR_proxmox_password: ${{ secrets.PROXMOX_PASSWORD }}
-          VAULT_ADDR: ${{ secrets.VAULT_ADDR || 'http://localhost:8200' }}
-          VAULT_NAMESPACE: ${{ secrets.VAULT_NAMESPACE || '' }}
+          TF_VAR_pve_api: ${{ secrets.PVE_API }}
+          TF_VAR_pve_user: ${{ secrets.PVE_USER }}
+          TF_VAR_pve_pass: ${{ secrets.PVE_PASS }}
+          TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
         run: |
           terraform apply -auto-approve
 
-  vault-secrets:
-    needs: terraform-apply
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Vault
-        uses: hashicorp/vault-action@v2
-        with:
-          url: ${{ secrets.VAULT_ADDR }}
-          method: jwt
-          jwtGithubAudience: ${{ secrets.VAULT_AUDIENCE }}
-          secrets: |
-            secret/data/network-vm env | ;
-            secret/data/network-vm/ssh SSH_PRIVATE_KEY | SSH_PRIVATE_KEY ;
-
-      - name: Generate Vault secrets for network VM
-        run: |
-          chmod +x scripts/dev/network-vm/vault-generate-secrets.sh
-          scripts/dev/network-vm/vault-generate-secrets.sh
+  # Vault setup will be added later when Vault is ready
+  # vault-secrets:
+  #   needs: terraform-apply
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Setup Vault
+  #       uses: hashicorp/vault-action@v2
+  #       with:
+  #         url: ${{ secrets.VAULT_ADDR }}
+  #         method: jwt
+  #         jwtGithubAudience: ${{ secrets.VAULT_AUDIENCE }}
+  #         secrets: |
+  #           secret/data/network-vm env | ;
+  #           secret/data/network-vm/ssh SSH_PRIVATE_KEY | SSH_PRIVATE_KEY ;
+  #
+  #     - name: Generate Vault secrets for network VM
+  #       run: |
+  #         chmod +x scripts/dev/network-vm/vault-generate-secrets.sh
+  #         scripts/dev/network-vm/vault-generate-secrets.sh
 
   ansible:
-    needs: [terraform-apply, vault-secrets]
+    needs: terraform-apply
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -142,14 +130,15 @@ jobs:
           pip install ansible hvac
           ansible-galaxy collection install community.hashi_vault community.docker
 
-      - name: Setup Vault for Ansible
-        uses: hashicorp/vault-action@v2
-        with:
-          url: ${{ secrets.VAULT_ADDR }}
-          method: jwt
-          jwtGithubAudience: ${{ secrets.VAULT_AUDIENCE }}
-          secrets: |
-            secret/data/network-vm/ssh SSH_PRIVATE_KEY | SSH_PRIVATE_KEY ;
+      # Vault setup will be added later when Vault is ready
+      # - name: Setup Vault for Ansible
+      #   uses: hashicorp/vault-action@v2
+      #   with:
+      #     url: ${{ secrets.VAULT_ADDR }}
+      #     method: jwt
+      #     jwtGithubAudience: ${{ secrets.VAULT_AUDIENCE }}
+      #     secrets: |
+      #       secret/data/network-vm/ssh SSH_PRIVATE_KEY | SSH_PRIVATE_KEY ;
 
       - name: Configure SSH
         run: |
