--- a/ansible/dev/media-stack/roles/media-containers/vars/main.yml
+++ b/ansible/dev/media-stack/roles/media-containers/vars/main.yml
@@ -2,8 +2,8 @@ base_media_path: /mnt/media
 timezone: "UTC"
 
 
-vault_addr: "http://192.168.50.169:8200"
-vault_token: "{{ lookup('env', 'VAULT_TOKEN') }}"
+vault_addr: "http://localhost:8200"
+vault_token: "{{ lookup('env', 'VAULT_TOKEN') | default('myroot', true) }}"
 
 
 media_containers:
