--- a/ansible/dev/network-vm/roles/tailscale/vars/main.yml
+++ b/ansible/dev/network-vm/roles/tailscale/vars/main.yml
@@ -1,5 +1,5 @@
 tailscale_authkey: >-
   {{ lookup('community.hashi_vault.hashi_vault',
     'secret=secret/data/tailscale:authkey token=' ~ vault_token ~ ' url=' ~ vault_addr) }}
-vault_addr: "http://192.168.50.169:8200"
-vault_token: "{{ lookup('env', 'VAULT_TOKEN') }}"
+vault_addr: "http://localhost:8200"
+vault_token: "{{ lookup('env', 'VAULT_TOKEN') | default('myroot', true) }}"
